[gd_scene load_steps=15 format=2]

[ext_resource path="res://Font/Default.tres" type="DynamicFont" id=1]
[ext_resource path="res://Font/Bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://sprite-action-black.png" type="Texture" id=3]
[ext_resource path="res://Font/SmallBold.tres" type="DynamicFont" id=4]
[ext_resource path="res://Font/Small.tres" type="DynamicFont" id=5]
[ext_resource path="res://Interface/ResourceMarket/importexportexchange.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 33, 224, 30, 30 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 129, 289, 30, 30 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 97, 129, 30, 30 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.32549, 0.32549, 0.333333, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.74902, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxLine" id=10]
color = Color( 0.0784314, 0.0784314, 0.0862745, 1 )
thickness = 5
vertical = true

[sub_resource type="Theme" id=12]
VScrollBar/styles/grabber = SubResource( 1 )
VScrollBar/styles/grabber_highlight = SubResource( 2 )
VScrollBar/styles/grabber_pressed = SubResource( 3 )
VScrollBar/styles/scroll = SubResource( 10 )

[node name="IEE" type="Control"]
margin_right = 418.0
margin_bottom = 54.0
rect_min_size = Vector2( 418, 54 )
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 418.0
margin_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 418.0
margin_bottom = 20.0
custom_constants/separation = 0

[node name="importICON" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
modulate = Color( 0.580392, 0.580392, 0.584314, 1 )
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = SubResource( 11 )
expand = true

[node name="exportICON" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
visible = false
modulate = Color( 0.580392, 0.580392, 0.584314, 1 )
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = SubResource( 13 )
expand = true

[node name="exchangeICON" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
visible = false
modulate = Color( 0.580392, 0.580392, 0.584314, 1 )
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = SubResource( 14 )
expand = true

[node name="Label" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
margin_left = 20.0
margin_top = 2.0
margin_right = 320.0
margin_bottom = 17.0
rect_min_size = Vector2( 300, 15 )
size_flags_vertical = 4
custom_fonts/bold_font = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[b][color=#949495]IMPORTS"
text = "IMPORTS"
scroll_active = false

[node name="ieedata" type="RichTextLabel" parent="VBoxContainer"]
margin_left = 20.0
margin_top = 24.0
margin_right = 418.0
margin_bottom = 54.0
rect_min_size = Vector2( 398, 30 )
focus_mode = 2
size_flags_horizontal = 8
theme = SubResource( 12 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "thing"
tab_size = 1
text = "thing"
selection_enabled = true
